<?xml version="1.0"?>
<package format="2">
  <name>mouvement</name>
  <version>0.0.0</version>
  <description>deplacement du robot</description>

  <maintainer email="bibi@todo.todo">bibi</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
